## The main script
bin_SCRIPTS = incedit.py

## Directory where .class files will be installed
inceditdir = $(pythondir)/incedit

inceditdir = $(pythondir)/usr/binsss
incedit_PYTHON = \
	incedit.py\
	utils.py \
	tab.py \
	toolbar.py \
	menu.py \
	sep.py \
	print.py \
	undostack.py \
	about.py \
	find.py
