## Process this file with automake to produce Makefile.in
## Created by Anjuta

## The main script
bin_SCRIPTS = incedit.py

## Directory where .class files will be installed
inceditdir = $(pythondir)/incedit

incedit_PYTHON = \
	incedit.py\
	tab.py \
	about.py \
	printer.py \
	sep.py \
	toolbar.py \
	undostack.py \
	utils.py
